apps/home/atuin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: atuin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`atuin.gibbs.tk`)
      kind: Rule
      services:
        - name: atuin
          port: 8888
      # middlewares:
      #   - name: security-no-frame-deny
      #     namespace: kube-system
  tls:
    secretName: wildcard-gibbs-tk
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
  labels:
    monitor: atuin
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 8888
